--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 body {
   background: $color-bg;
   color: $color-text;
-  font-family: system-ui, sans-serif;
+  font-family: 'Poppins', system-ui, sans-serif;
   margin: 0;
 }
 
